// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkCard dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(29, 27, 32)",
        "borderRadius": 12,
        "elevation": 0,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -9934465,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard dark mode should render correctly with the "focused" state 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(29, 27, 32)",
        "borderRadius": 12,
        "elevation": 0,
      },
      Object {
        "backgroundColor": "rgb(44, 44, 46)",
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -9934465,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard light mode should render correctly with the "focused" state 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
      Object {
        "elevation": 8,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly when "cornerStyle=large" 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
      Object {
        "borderRadius": 24,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
    testID="arbitrary value"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly with custom inner style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 12,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={Array []}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;
